force-app/main/default/objects/Health_issue__c/Health_issue__c.object-meta.xml
<CustomObject>
    <label>Health issue</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Health Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>