force-app/main/default/objects/Health_issue__c/fields/Concerns_Needs__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Needs__c</fullName>
    <label>Concerns/Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>