force-app/main/default/objects/Health_issue__c/fields/Date_of_Last_Exam__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Exam__c</fullName>
    <label>Date of Last Exam</label>
    <type>Date</type>
</CustomField>