force-app/main/default/objects/Health_issue__c/fields/Doctor_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Contact_Information__c</fullName>
    <label>Doctor/Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>