force-app/main/default/objects/Health_issue__c/fields/Health_issues__c.field-meta.xml
<CustomField>
    <fullName>Health_issues__c</fullName>
    <label>Health issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Health</fullName>
            </value>
            <value>
                <fullName>Dental Health</fullName>
            </value>
            <value>
                <fullName>Vision/Eye Health</fullName>
            </value>
            <value>
                <fullName>Sexual Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>