force-app/main/default/objects/Health_issue__c/fields/Youth_Transition_Plan__c.field-meta.xml
<CustomField>
    <fullName>Youth_Transition_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youth Transition Plan</label>
    <referenceTo>Youth_Transition_Plan__c</referenceTo>
    <relationshipLabel>Health issues</relationshipLabel>
    <relationshipName>Health_issues</relationshipName>
    <type>Lookup</type>
</CustomField>